3.18003 2012-06-27
    - Use path statuses/mentions, not statuses/replies

3.18002 2012-04-24
    - added API method subscriptions; list_subscriptions is now
      all_subscriptions with alias list_subscriptions
    - deprecated TwitterVision API support
    - added API method members_destroy_all with alias remove_list_members
    - added deprecation warning for 'trends'; calls trends_location(1), instead

3.18001 2011-09-29
    - fixed: AutoCursor:
        - no behavior change when user passes "cursor" arg
        - work with InflateObjects trait
    - synthetic ags use (-) prefix: -authenticate, -since, -legacy_lists_api
    - Replaced JSON::Any with JSON
    - documented new arguments for friendship_exists

3.18000_01 2011-09-21
    - added update_with_media (Allen Haim)
    - added get_privacy_policy and get_tos API methods
    - added get_languages and get_settings API methods
    - added contributors and contributees API methods
    - added geo_search, geo_search, similar_places, and add_place API methods
    - friends/followers API methods deprecated
    - implemented the *new* Lists API in the API::REST trait
    - replaced MX:MultiInitArg::Trait with MX:Aliases (Justin Hunter)
    - fixed bad whatis entry (patch from debian, closes RT #67203)
    - use Digest::SHA instead of Digest::SHA1 (patch from debian, closes RT #67202)

3.17001 2011-03-31
    - fixed intermittent bug in AutoCursor (result of Class::MOP anon class caching)

3.17000 2011-03-29
    - production release with new AutoCursor trait

3.16000_1 2011-03-27
    - Added AutoCursor trait

3.16000 2011-03-26
    - Moved trends methods to API::REST; added warning to API::Search::Trends
    - Added no_retweet_ids method
    - modify searchapiurl for identica option
    - added deprecation notice to Net::Identica with Net::Twitter examples
    - replaced Test::Exception with Test::Fatal in tests

3.15000 2011-02-25
    - added Lists API method members_create_all (alias add_list_members)